<resources>
    <string name="app_name">App Manager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="navigation_draw_open">Open navigation drawer</string>
    <string name="navigation_draw_Close">Close navigation drawer</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_filter_by">Menu filter by</string>
    <string name="all">All</string>
    <string name="system">System</string>
    <string name="user">User</string>
    <string name="a_z"><![CDATA[A->Z]]></string>
    <string name="z_a"><![CDATA[Z->A]]></string>
    <string name="menu_sort_by">Menu sort by</string>
    <string name="menu_order_by">Menu order by</string>
    <string name="order_by_app_name">Order by app name</string>
    <string name="order_by_package_name">Order by package name</string>
    <string name="app_icon_default">App icon</string>

    <item name="group_filter_app" type="id" />
    <item name="group_sort_app" type="id" />
    <item name="group_order_app" type="id" />
    <string name="title_activity_left_control">LeftControlActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="multiple_select">Multiple select</string>
    <string name="hide_search_bar">Hide search bar</string>
    <string name="app_name_default">App name</string>
    <string name="package_default">app.god.example</string>
    <string name="default_zero">0</string>
    <string name="created_by_goddie9x">Created by god team</string>
    <string name="stopped">Stopped</string>
    <string name="running">Running</string>
    <string name="settings">Settings</string>
    <string name="back_to_main_screen">Back to main screen</string>
    <string name="group_app_description_default_0">group app description default (0)</string>
    <string name="dark_mode">Dark mode</string>
    <string name="freeze_all_app">Freeze all app</string>
    <string name="force_stop_this_app">Force stop this app</string>
    <string name="force_stop">Force stop</string>
    <string name="freeze_app">Freeze app</string>
    <string name="make_app_not_running_in_background">Make app not running in background</string>
    <string name="turn_off_notification">Turn off notification</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_this_app">Uninstall this app</string>
    <string name="more_info">More info</string>
    <string name="open_app_in_settings">Open app in settings</string>
    <string name="start_freeze">Start freeze</string>
    <string name="light_mode">light mode</string>
    <string name="refresh">refresh</string>
    <string name="freeze_zone">Freeze zone</string>
    <string name="notification_zone">Notification zone</string>
    <string name="filter_system_app_amount_title">System applications (</string>
    <string name="filter_user_app_amount_title">User applications (</string>
    <string name="filter_all_app_amount_title">All applications (</string>
    <string name="nothingToFreeze">List  app to freeze is empty</string>
    <string name="power_button_hint">Hint: Press the Power button to abort the freeze process</string>
    <string name="warning_accessibility_require">Warning accessibility require</string>
    <string name="accessibility_require_message">Your app need accessibility to perform freeze apps</string>
    <string name="cant_freeze">Cannot freeze package %s</string>
    <string name="freeze_screen_off_failed">\'Freeze when the screen turns off\' failed</string>
    <string name="disable_power_btn_instantly_locks_warning">You have to disable \'Power button instantly locks\' in the system settings for this to work.</string>
    <string name="manager_app">Manager app</string>
    <string name="notification">Notification</string>
    <string name="remove_from_this_list">Remove from this list</string>
    <string name="select_option">Select option</string>
    <string name="applications">applications</string>
    <string name="action">Action</string>
    <string name="accessibility_service_description">Turn this on let you automatically freeze apps</string>
    <string name="disable_multiple_select">Disable multiple select</string>
    <string name="freeze_service_name">God freeze service</string>
    <string name="service">service</string>
    <string name="disable_auto_turn_off_notification">Disable auto turn off notification</string>
    <string name="enable_auto_turn_off_notification">Enable auto turn off notification</string>
    <string name="turn_on_notification">Turn on notification</string>
    <string name="add_to_notification_zone">Add to notification zone</string>
    <string name="permission_requirement">Permission requirement!</string>
    <string name="permission_notification_description">Our app need permission to manager notification</string>
    <string name="permission_require_to_full_power">You should provide permission to get full power</string>
    <string name="warning">Warning</string>
    <string name="do_with_action_app_waning">You are trying to do this action on system app\nThis can cause the System not working correctly\nDo you really want to continue</string>
    <string name="do_not_show_dialog">Don\'t show this dialog again</string>
    <string name="has_added_to_the_list_notification">\"%s has added to list turn off notification\"</string>
    <string name="already_in_turn_off_notification">\"%s already in turn off notification list\"</string>
    <string name="failed">Failed</string>
    <string name="done">Done</string>
    <string name="already_in_freeze_list">\" already in freeze list\"</string>
    <string name="freeze">\"Freeze \"</string>
    <string name="success">\" success\"</string>
    <string name="require_accessibility_description">Our app need accessibility to freeze app\n
        *Note: If you already allowed this permission but still get this message\nThat means the service has been stopped for some reason. So please disable and enable accessibility for the app again</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="freeze_all_app_success">Freeze all app success</string>
    <string name="open_app">Open app</string>
    <string name="disable_warning">Disable warning</string>
    <string name="enable_warning">Enable warning</string>
    <string name="target_not_install_or_not_have_ui">Target app is not installed or does not have UI</string>
    <string name="uninstall_target_success">Uninstall %s success</string>
    <string name="uninstall_target_failed">Uninstall %s failed</string>
    <string name="freeze_target_success">Freeze %s success</string>
    <string name="freeze_target_failed">Freeze %s failed</string>
    <string name="cannot_uninstall_system_app_without_root">You cannot uninstall system app without root</string>
    <string name="disabled_warning">Disabled warning</string>
    <string name="enabled_warning">Enabled warning</string>
</resources>