<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".UI.MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorSecondaryVariant"
                android:elevation="4dp">

                <TextView
                    android:id="@+id/app_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="24sp" />

                <LinearLayout
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/close_search_bar_btn"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:contentDescription="@string/hide_search_bar"
                        android:src="@drawable/ic_arrow_back" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_app"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:iconifiedByDefault="false"
                        android:imeOptions="actionSearch"
                        android:queryHint="Search"
                        app:actionViewClass="androidx.appcompat.widget.SearchView" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/select_options_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/close_select_options_bar"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:contentDescription="@string/hide_search_bar"
                        android:src="@drawable/ic_arrow_back" />

                    <TextView
                        android:id="@+id/amount_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:minWidth="30dp"
                        android:text="@string/default_zero" />

                    <ImageButton
                        android:id="@+id/select_all"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:background="@color/transparent"
                        android:contentDescription="@string/hide_search_bar"
                        android:src="@drawable/ic_select_all" />

                    <ImageButton
                        android:id="@+id/deselect_all"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:background="@color/transparent"
                        android:contentDescription="@string/hide_search_bar"
                        android:src="@drawable/ic_deselect" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/app_group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSecondaryVariant"
                android:padding="4dp"
                android:text="@string/group_app_description_default_0" />
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_app"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:overScrollMode="always"
                android:scrollbarDefaultDelayBeforeFade="10"
                android:scrollbarSize="10dp"
                android:scrollbarThumbVertical="@drawable/custom_scrollbar_thumb"
                android:scrollbars="vertical" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/freeze_float_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:contentDescription="@string/start_freeze"
                android:elevation="4dp"
                android:src="@drawable/ic_freeze"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="80dp"
        android:background="?attr/colorSecondary"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>
